--- a/package.json
+++ b/package.json
@@ -60,6 +60,10 @@
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
+    "**/@typescript-eslint/parser": "^4.1.1"
+  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
